--- a/geometry-vibes.html
+++ b/geometry-vibes.html
@@ -2,6 +2,15 @@
 <html lang="en-US">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P56B2V2YZS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P56B2V2YZS');
+</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -17,43 +26,7 @@
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@500;600;700&display=swap" rel="stylesheet">
-	        <script type="application/ld+json">
-            {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "Geometry Dash Subzero",
-    "image": "https://geometry-dashsubzero.github.io/rs/imgs/geometry-dash-subzero1.png",
-    "@id": "https://geometry-dashsubzero.github.io/",
-    "url": "https://geometry-dashsubzero.github.io/",
-    "telephone": "",
-    "priceRange": "$",
-    "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "",
-        "addressLocality": "",
-        "addressRegion": "",
-        "postalCode": "",
-        "addressCountry": ""
-    },
-    "OpeningHoursSpecification": {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday",
-            "Saturday",
-            "Sunday"
-        ],
-        "opens": "",
-        "closes": ""
-    },
-    "sameAs": [
-        ""
-    ]
-}        </script>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@500;600;700&display=swap" rel="stylesheet">	        
     </head>
 
 <body><!--MENU-->
@@ -287,4 +260,5 @@
     <script src="rs/js/footer.js"></script>
 </footer>
 </body>
+
 </html>
