--- a/geometry-dash.html
+++ b/geometry-dash.html
@@ -101,7 +101,7 @@
 
         <div class="row">
             <div class="frame-box-game">
-                <iframe title="Geometry Dash" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="https://azgames.io/geometry-dash.embed" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
+                <iframe title="Geometry Dash" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="https://scratch.mit.edu/projects/105500895/embed" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
                 <div class="header-game">
                     <div class="box-header">
                         <h1>Geometry Dash</h1>
@@ -257,3 +257,4 @@
 </body>
 
 </html>
+
