--- a/wave-dash.html
+++ b/wave-dash.html
@@ -101,7 +101,7 @@
 
         <div class="row">
             <div class="frame-box-game">
-                <iframe title="Wave Dash" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="https://1games.io/game/wave-dash/" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
+                <iframe title="Wave Dash" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="https://scratch.mit.edu/projects/728467856/embed" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
                 <div class="header-game">
                     <div class="box-header">
                         <h1>Wave Dash</h1>
@@ -262,3 +262,4 @@
 </body>
 
 </html>
+
