--- a/geometry-vibes.html
+++ b/geometry-vibes.html
@@ -12,6 +12,10 @@
   gtag('config', 'G-P56B2V2YZS');
 </script>
     <meta charset="utf-8">
+		<meta http-equiv="refresh" content="0; url=https://geometry-dashsubzero.github.io/geometry-vibes">
+    <script type="text/javascript">
+        window.location.href = "https://geometry-dashsubzero.com/geometry-vibes"
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="content-language" content="en">
@@ -262,3 +266,4 @@
 </body>
 
 </html>
+
