--- a/wave-dash.html
+++ b/wave-dash.html
@@ -12,6 +12,10 @@
   gtag('config', 'G-P56B2V2YZS');
 </script>
     <meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; url=https://geometry-dashsubzero.github.io/wave-dash">
+    <script type="text/javascript">
+        window.location.href = "https://geometry-dashsubzero.com/wave-dash"
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="content-language" content="en">
@@ -262,4 +266,5 @@
 </body>
 
 </html>
+
 
